--- a/ShankarMasala/ShankarMasala/Controller/OrderHistory/OrderHistoryVC.xib
+++ b/ShankarMasala/ShankarMasala/Controller/OrderHistory/OrderHistoryVC.xib
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -23,52 +24,51 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yfA-Lc-ghh">
                     <rect key="frame" x="0.0" y="20" width="320" height="28"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="hjq-y5-EhP">
-                            <rect key="frame" x="6" y="6" width="308" height="16"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="hjq-y5-EhP">
+                            <rect key="frame" x="6" y="6" width="286" height="16"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order ID" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mue-85-zyQ">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order ID" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mue-85-zyQ">
                                     <rect key="frame" x="0.0" y="0.0" width="51.5" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="blb-l2-WIA">
-                                    <rect key="frame" x="63.5" y="0.0" width="67" height="16"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="blb-l2-WIA">
+                                    <rect key="frame" x="56.5" y="0.0" width="67" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total Pay (Rs.)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eaA-BZ-sME">
-                                    <rect key="frame" x="140.5" y="0.0" width="87" height="16"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total Pay (Rs.)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eaA-BZ-sME">
+                                    <rect key="frame" x="128.5" y="0.0" width="87" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IsY-SL-cxV">
-                                    <rect key="frame" x="237.5" y="0.0" width="39" height="16"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IsY-SL-cxV">
+                                    <rect key="frame" x="220.5" y="0.0" width="39" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="20L-v3-bqB">
-                                    <rect key="frame" x="286.5" y="0.0" width="21.5" height="16"/>
+                                    <rect key="frame" x="264.5" y="0.0" width="21.5" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                             <constraints>
-                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="16" id="dGq-NW-G71"/>
-                                <constraint firstAttribute="height" constant="16" id="sYi-zh-E2a"/>
+                                <constraint firstAttribute="height" constant="16" id="ysP-Tb-bZe"/>
                             </constraints>
                         </stackView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="hjq-y5-EhP" firstAttribute="leading" secondItem="yfA-Lc-ghh" secondAttribute="leading" constant="6" id="EPA-OT-TpY"/>
+                        <constraint firstAttribute="trailing" secondItem="hjq-y5-EhP" secondAttribute="trailing" constant="28" id="GDQ-M2-jzC"/>
                         <constraint firstAttribute="height" constant="28" id="JIM-NK-EBZ"/>
-                        <constraint firstItem="hjq-y5-EhP" firstAttribute="centerY" secondItem="yfA-Lc-ghh" secondAttribute="centerY" id="RLJ-gt-RFd"/>
-                        <constraint firstAttribute="trailing" secondItem="hjq-y5-EhP" secondAttribute="trailing" constant="6" id="nSk-uA-rs5"/>
+                        <constraint firstItem="hjq-y5-EhP" firstAttribute="leading" secondItem="yfA-Lc-ghh" secondAttribute="leading" constant="6" id="PfF-MW-00u"/>
+                        <constraint firstItem="hjq-y5-EhP" firstAttribute="top" secondItem="yfA-Lc-ghh" secondAttribute="top" constant="6" id="YGY-YV-RFR"/>
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Dp8-oG-jY4">
