--- a/ShankarMasala/ShankarMasala/View/CustomCell/BranchTableViewCell.xib
+++ b/ShankarMasala/ShankarMasala/View/CustomCell/BranchTableViewCell.xib
@@ -1,96 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="KGk-i7-Jjw" customClass="BranchTableViewCell" customModule="ShankarMasala" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="KGk-i7-Jjw" customClass="BranchTableViewCell" customModule="ShankarMasala" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="101"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="160.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="100.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zGA-5X-aA9">
-                        <rect key="frame" x="16" y="16.5" width="288" height="128"/>
+                        <rect key="frame" x="10" y="5" width="300" height="90.5"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Bf-4j-Max">
-                                <rect key="frame" x="0.0" y="0.0" width="288" height="36.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="unselected-radio" translatesAutoresizingMaskIntoConstraints="NO" id="2Vd-NP-gbR">
-                                        <rect key="frame" x="8" y="4" width="30" height="30"/>
+                                        <rect key="frame" x="8" y="6" width="18" height="18"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="8t6-PY-ESa"/>
-                                            <constraint firstAttribute="height" constant="30" id="jJJ-yS-vUC"/>
+                                            <constraint firstAttribute="height" constant="18" id="Pxu-G6-Amu"/>
+                                            <constraint firstAttribute="width" constant="18" id="uov-Zs-bGS"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHANKAR MASALA (ANAND)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f95-bB-D5p">
-                                        <rect key="frame" x="46" y="8" width="234" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                        <rect key="frame" x="34" y="7" width="258" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.88235294119999996" green="0.24313725489999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="2Vd-NP-gbR" firstAttribute="top" secondItem="4Bf-4j-Max" secondAttribute="top" constant="4" id="2mj-gx-5pr"/>
-                                    <constraint firstItem="f95-bB-D5p" firstAttribute="leading" secondItem="2Vd-NP-gbR" secondAttribute="trailing" constant="8" id="OfJ-Vy-f8D"/>
-                                    <constraint firstItem="f95-bB-D5p" firstAttribute="top" secondItem="4Bf-4j-Max" secondAttribute="top" constant="8" id="ak1-AP-kZ0"/>
-                                    <constraint firstAttribute="trailing" secondItem="f95-bB-D5p" secondAttribute="trailing" constant="8" id="g2j-Qd-ba0"/>
-                                    <constraint firstItem="2Vd-NP-gbR" firstAttribute="leading" secondItem="4Bf-4j-Max" secondAttribute="leading" constant="8" id="ojh-hs-kfF"/>
-                                    <constraint firstAttribute="bottom" secondItem="f95-bB-D5p" secondAttribute="bottom" constant="8" id="xn9-l8-TgW"/>
+                                    <constraint firstItem="f95-bB-D5p" firstAttribute="top" secondItem="4Bf-4j-Max" secondAttribute="top" constant="7" id="Gf9-90-GHC"/>
+                                    <constraint firstAttribute="bottom" secondItem="f95-bB-D5p" secondAttribute="bottom" constant="7" id="Okb-aT-Tdj"/>
+                                    <constraint firstItem="2Vd-NP-gbR" firstAttribute="leading" secondItem="4Bf-4j-Max" secondAttribute="leading" constant="8" id="PKC-ER-JVr"/>
+                                    <constraint firstItem="f95-bB-D5p" firstAttribute="leading" secondItem="2Vd-NP-gbR" secondAttribute="trailing" constant="8" id="TN9-eK-O4B"/>
+                                    <constraint firstAttribute="trailing" secondItem="f95-bB-D5p" secondAttribute="trailing" constant="8" id="bJq-r8-Hg4"/>
+                                    <constraint firstItem="f95-bB-D5p" firstAttribute="centerY" secondItem="4Bf-4j-Max" secondAttribute="centerY" id="cld-vg-4Xd"/>
+                                    <constraint firstAttribute="height" constant="30" id="iN7-Fh-00j"/>
+                                    <constraint firstItem="2Vd-NP-gbR" firstAttribute="centerY" secondItem="4Bf-4j-Max" secondAttribute="centerY" id="vSb-lw-lTv"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J8w-B8-BG7">
-                                <rect key="frame" x="46" y="44.5" width="234" height="19.5"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                <rect key="frame" x="38" y="31.5" width="252" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                 <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CONTACT PERSON :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="USZ-UY-Ztq">
-                                <rect key="frame" x="46" y="72" width="234" height="18"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                <rect key="frame" x="38" y="51" width="252" height="13.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PHONE NO.:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kJN-3f-qHp">
-                                <rect key="frame" x="46" y="98" width="234" height="18"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                <rect key="frame" x="38" y="69.5" width="252" height="13.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.62745098039215685" green="0.64313725490196072" blue="0.63921568627450975" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="J8w-B8-BG7" firstAttribute="leading" secondItem="zGA-5X-aA9" secondAttribute="leading" constant="46" id="018-2C-fRK"/>
-                            <constraint firstItem="kJN-3f-qHp" firstAttribute="leading" secondItem="zGA-5X-aA9" secondAttribute="leading" constant="46" id="9ae-Gl-3EX"/>
-                            <constraint firstAttribute="trailing" secondItem="J8w-B8-BG7" secondAttribute="trailing" constant="8" id="LJA-WE-Dnv"/>
-                            <constraint firstAttribute="trailing" secondItem="4Bf-4j-Max" secondAttribute="trailing" id="MZ6-IS-kw0"/>
-                            <constraint firstItem="USZ-UY-Ztq" firstAttribute="leading" secondItem="zGA-5X-aA9" secondAttribute="leading" constant="46" id="Slb-FP-60x"/>
-                            <constraint firstItem="4Bf-4j-Max" firstAttribute="top" secondItem="zGA-5X-aA9" secondAttribute="top" id="Wtl-tt-lUi"/>
-                            <constraint firstAttribute="bottom" secondItem="kJN-3f-qHp" secondAttribute="bottom" constant="12" id="c5X-3J-xXn"/>
-                            <constraint firstAttribute="trailing" secondItem="kJN-3f-qHp" secondAttribute="trailing" constant="8" id="hED-qn-bXF"/>
-                            <constraint firstAttribute="trailing" secondItem="USZ-UY-Ztq" secondAttribute="trailing" constant="8" id="iQc-by-FN4"/>
-                            <constraint firstItem="J8w-B8-BG7" firstAttribute="top" secondItem="4Bf-4j-Max" secondAttribute="bottom" constant="8" id="k7Z-tf-SVp"/>
-                            <constraint firstItem="4Bf-4j-Max" firstAttribute="leading" secondItem="zGA-5X-aA9" secondAttribute="leading" id="ki2-v9-4rK"/>
-                            <constraint firstItem="USZ-UY-Ztq" firstAttribute="top" secondItem="J8w-B8-BG7" secondAttribute="bottom" constant="8" id="shI-sI-s3N"/>
-                            <constraint firstItem="kJN-3f-qHp" firstAttribute="top" secondItem="USZ-UY-Ztq" secondAttribute="bottom" constant="8" id="tPy-Wr-D3A"/>
+                            <constraint firstAttribute="trailing" secondItem="kJN-3f-qHp" secondAttribute="trailing" constant="10" id="28A-0X-KEJ"/>
+                            <constraint firstItem="4Bf-4j-Max" firstAttribute="leading" secondItem="zGA-5X-aA9" secondAttribute="leading" id="6Lc-wl-eKK"/>
+                            <constraint firstAttribute="trailing" secondItem="4Bf-4j-Max" secondAttribute="trailing" id="BpB-cA-wbJ"/>
+                            <constraint firstItem="4Bf-4j-Max" firstAttribute="top" secondItem="zGA-5X-aA9" secondAttribute="top" id="PWW-cW-fZW"/>
+                            <constraint firstAttribute="trailing" secondItem="USZ-UY-Ztq" secondAttribute="trailing" constant="10" id="R3w-mz-E5z"/>
+                            <constraint firstItem="J8w-B8-BG7" firstAttribute="top" secondItem="4Bf-4j-Max" secondAttribute="bottom" constant="1.5" id="UHv-xq-Z4G"/>
+                            <constraint firstAttribute="bottom" secondItem="kJN-3f-qHp" secondAttribute="bottom" constant="7.5" id="gAY-WF-etO"/>
+                            <constraint firstItem="USZ-UY-Ztq" firstAttribute="leading" secondItem="zGA-5X-aA9" secondAttribute="leading" constant="38" id="qDd-QG-lXz"/>
+                            <constraint firstItem="J8w-B8-BG7" firstAttribute="leading" secondItem="zGA-5X-aA9" secondAttribute="leading" constant="38" id="ra6-xc-dNi"/>
+                            <constraint firstItem="USZ-UY-Ztq" firstAttribute="top" secondItem="J8w-B8-BG7" secondAttribute="bottom" constant="5" id="rw3-K6-SHt"/>
+                            <constraint firstAttribute="trailing" secondItem="J8w-B8-BG7" secondAttribute="trailing" constant="10" id="ttn-Bp-Mps"/>
+                            <constraint firstItem="kJN-3f-qHp" firstAttribute="top" secondItem="USZ-UY-Ztq" secondAttribute="bottom" constant="5" id="vQB-iX-G5v"/>
+                            <constraint firstItem="kJN-3f-qHp" firstAttribute="leading" secondItem="zGA-5X-aA9" secondAttribute="leading" constant="38" id="ziu-ml-Bbi"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="zGA-5X-aA9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="1CF-3k-Iww"/>
-                    <constraint firstItem="zGA-5X-aA9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16.5" id="SiB-JF-zBT"/>
-                    <constraint firstAttribute="trailing" secondItem="zGA-5X-aA9" secondAttribute="trailing" constant="16" id="jby-ZL-QC2"/>
-                    <constraint firstAttribute="bottom" secondItem="zGA-5X-aA9" secondAttribute="bottom" constant="16" id="wZ3-dv-wou"/>
+                    <constraint firstAttribute="trailing" secondItem="zGA-5X-aA9" secondAttribute="trailing" constant="10" id="49y-Pu-KIs"/>
+                    <constraint firstAttribute="bottom" secondItem="zGA-5X-aA9" secondAttribute="bottom" constant="5" id="G4e-Ev-9BT"/>
+                    <constraint firstItem="zGA-5X-aA9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="THg-Po-7XD"/>
+                    <constraint firstItem="zGA-5X-aA9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="cxt-aw-Cys"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -101,7 +103,7 @@
                 <outlet property="lblContactNumber" destination="kJN-3f-qHp" id="BmP-4A-OHO"/>
                 <outlet property="lblTitle" destination="f95-bB-D5p" id="YBn-hp-XB5"/>
             </connections>
-            <point key="canvasLocation" x="386" y="24"/>
+            <point key="canvasLocation" x="96" y="-2.2488755622188905"/>
         </tableViewCell>
     </objects>
     <resources>
