--- a/ShankarMasala/ShankarMasala/View/CustomCell/OrderHistoryTableViewCell.xib
+++ b/ShankarMasala/ShankarMasala/View/CustomCell/OrderHistoryTableViewCell.xib
@@ -1,82 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="OrderHistoryTableViewCell" customModule="ShankarMasala" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="122" id="KGk-i7-Jjw" customClass="OrderHistoryTableViewCell" customModule="ShankarMasala" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="122"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="149.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="121.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="73o-DV-9lQ">
-                        <rect key="frame" x="8" y="8" width="128" height="128"/>
+                        <rect key="frame" x="6" y="5" width="102" height="112"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="73o-DV-9lQ" secondAttribute="height" multiplier="1:1" id="olo-pS-63w"/>
+                            <constraint firstAttribute="width" constant="102" id="5VJ-bF-xHT"/>
+                            <constraint firstAttribute="height" constant="112" id="J9o-Fp-crj"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2BD-fj-F9k">
-                        <rect key="frame" x="144" y="8" width="168" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                        <rect key="frame" x="117" y="9" width="193" height="18"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Packing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wi4-JH-mmq">
-                        <rect key="frame" x="144" y="36.5" width="152" height="18"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Packing" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wi4-JH-mmq">
+                        <rect key="frame" x="117" y="29" width="193" height="16"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MRP : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ABh-yZ-dJ7">
-                        <rect key="frame" x="144" y="62.5" width="152" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MRP : " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ABh-yZ-dJ7">
+                        <rect key="frame" x="117" y="50.5" width="193" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Offer Price :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L4Z-ik-06z">
-                        <rect key="frame" x="144" y="88.5" width="152" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Offer Price :" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L4Z-ik-06z">
+                        <rect key="frame" x="117" y="70" width="193" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Oty : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fOB-dE-fbo">
-                        <rect key="frame" x="144" y="114.5" width="152" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Oty : " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fOB-dE-fbo">
+                        <rect key="frame" x="117" y="92.5" width="193" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="ABh-yZ-dJ7" firstAttribute="leading" secondItem="73o-DV-9lQ" secondAttribute="trailing" constant="8" id="5D6-QA-yeX"/>
-                    <constraint firstItem="73o-DV-9lQ" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.4:1" id="D9W-Vg-xc7"/>
-                    <constraint firstItem="2BD-fj-F9k" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Jhf-gh-8Ye"/>
-                    <constraint firstItem="fOB-dE-fbo" firstAttribute="top" secondItem="L4Z-ik-06z" secondAttribute="bottom" constant="8" id="Lg0-Bc-CV0"/>
-                    <constraint firstItem="L4Z-ik-06z" firstAttribute="top" secondItem="ABh-yZ-dJ7" secondAttribute="bottom" constant="8" id="LpS-jB-sMx"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="fOB-dE-fbo" secondAttribute="bottom" constant="17" id="OGw-Y4-jfB"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="73o-DV-9lQ" secondAttribute="bottom" constant="13.5" id="PTb-Zs-4AH"/>
-                    <constraint firstItem="73o-DV-9lQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Pae-Yr-Jq6"/>
-                    <constraint firstItem="Wi4-JH-mmq" firstAttribute="top" secondItem="2BD-fj-F9k" secondAttribute="bottom" constant="8" id="ReX-Lg-Ckq"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="Wi4-JH-mmq" secondAttribute="trailing" constant="8" id="RwV-xv-oqx"/>
-                    <constraint firstAttribute="trailing" secondItem="2BD-fj-F9k" secondAttribute="trailing" constant="8" id="S7V-G7-gZM"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="ABh-yZ-dJ7" secondAttribute="trailing" constant="8" id="Tbm-Zv-BGJ"/>
-                    <constraint firstItem="73o-DV-9lQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Zdy-zs-kp3"/>
-                    <constraint firstItem="ABh-yZ-dJ7" firstAttribute="top" secondItem="Wi4-JH-mmq" secondAttribute="bottom" constant="8" id="dKZ-RY-kLs"/>
-                    <constraint firstItem="Wi4-JH-mmq" firstAttribute="leading" secondItem="73o-DV-9lQ" secondAttribute="trailing" constant="8" id="djJ-0p-Sw5"/>
-                    <constraint firstItem="2BD-fj-F9k" firstAttribute="leading" secondItem="73o-DV-9lQ" secondAttribute="trailing" constant="8" id="fyj-1B-hKF"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="L4Z-ik-06z" secondAttribute="trailing" constant="8" id="ow8-gh-s5L"/>
-                    <constraint firstItem="L4Z-ik-06z" firstAttribute="leading" secondItem="73o-DV-9lQ" secondAttribute="trailing" constant="8" id="qHp-JK-dvT"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="fOB-dE-fbo" secondAttribute="trailing" constant="8" id="rNE-OZ-JUh"/>
-                    <constraint firstItem="fOB-dE-fbo" firstAttribute="leading" secondItem="73o-DV-9lQ" secondAttribute="trailing" constant="8" id="raG-U6-Rqp"/>
+                    <constraint firstItem="L4Z-ik-06z" firstAttribute="leading" secondItem="73o-DV-9lQ" secondAttribute="trailing" constant="9" id="042-Px-txD"/>
+                    <constraint firstItem="fOB-dE-fbo" firstAttribute="leading" secondItem="73o-DV-9lQ" secondAttribute="trailing" constant="9" id="5Cw-mV-zuf"/>
+                    <constraint firstItem="73o-DV-9lQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="6" id="AlA-pZ-3FC"/>
+                    <constraint firstAttribute="trailing" secondItem="fOB-dE-fbo" secondAttribute="trailing" constant="10" id="C6h-UH-9bx"/>
+                    <constraint firstAttribute="bottom" secondItem="fOB-dE-fbo" secondAttribute="bottom" constant="13" id="DlH-DA-28A"/>
+                    <constraint firstItem="Wi4-JH-mmq" firstAttribute="leading" secondItem="73o-DV-9lQ" secondAttribute="trailing" constant="9" id="FOO-1t-8nT"/>
+                    <constraint firstItem="fOB-dE-fbo" firstAttribute="top" secondItem="L4Z-ik-06z" secondAttribute="bottom" constant="6.5" id="P7J-dg-E6t"/>
+                    <constraint firstItem="2BD-fj-F9k" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="9" id="SJO-kv-WMO"/>
+                    <constraint firstAttribute="trailing" secondItem="L4Z-ik-06z" secondAttribute="trailing" constant="10" id="SWZ-XH-VTV"/>
+                    <constraint firstItem="L4Z-ik-06z" firstAttribute="top" secondItem="ABh-yZ-dJ7" secondAttribute="bottom" constant="3.5" id="UZQ-CJ-Gjv"/>
+                    <constraint firstItem="Wi4-JH-mmq" firstAttribute="top" secondItem="2BD-fj-F9k" secondAttribute="bottom" constant="2" id="X3g-5e-ZOW"/>
+                    <constraint firstAttribute="trailing" secondItem="2BD-fj-F9k" secondAttribute="trailing" constant="10" id="X5a-eK-hdJ"/>
+                    <constraint firstAttribute="trailing" secondItem="ABh-yZ-dJ7" secondAttribute="trailing" constant="10" id="bAS-gI-xCE"/>
+                    <constraint firstItem="ABh-yZ-dJ7" firstAttribute="leading" secondItem="73o-DV-9lQ" secondAttribute="trailing" constant="9" id="gcf-ZH-y8R"/>
+                    <constraint firstItem="ABh-yZ-dJ7" firstAttribute="top" secondItem="Wi4-JH-mmq" secondAttribute="bottom" constant="5.5" id="h8E-oA-A10"/>
+                    <constraint firstItem="73o-DV-9lQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="hEw-d6-zad"/>
+                    <constraint firstItem="2BD-fj-F9k" firstAttribute="leading" secondItem="73o-DV-9lQ" secondAttribute="trailing" constant="9" id="ms6-Mw-DcD"/>
+                    <constraint firstAttribute="trailing" secondItem="Wi4-JH-mmq" secondAttribute="trailing" constant="10" id="w9z-0P-k7H"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -88,7 +88,7 @@
                 <outlet property="lblProductName" destination="2BD-fj-F9k" id="yfW-FN-7EO"/>
                 <outlet property="lblQty" destination="fOB-dE-fbo" id="810-DW-K3M"/>
             </connections>
-            <point key="canvasLocation" x="69" y="57"/>
+            <point key="canvasLocation" x="68.799999999999997" y="44.07796101949026"/>
         </tableViewCell>
     </objects>
 </document>
